--- a/app/src/main/res/layout/activity_add_to_do.xml
+++ b/app/src/main/res/layout/activity_add_to_do.xml
@@ -182,6 +182,7 @@
         android:layout_marginBottom="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
+        android:background="@drawable/layout_borders"
         android:contentDescription="Add reminder"
         android:text="ADD"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -196,7 +197,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:inputType="textShortMessage"
+        android:inputType="text|textShortMessage"
         android:text="Comment task..."
         app:layout_constraintStart_toStartOf="@+id/textViewTaskComment"
         app:layout_constraintTop_toBottomOf="@+id/textViewTaskComment"
