--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -27,10 +27,22 @@
     </string-array>
 
     <string-array name="default_job_reminders">
-        <item>Create programm</item>
-        <item>Add programm changes</item>
+        <item>Create program</item>
+        <item>Add program changes</item>
         <item>Make call</item>
         <item>Send E-mail</item>
         <item>Remember to visit</item>
+        <item>Do not forget</item>
+    </string-array>
+
+    <string-array name="default_home_reminders">
+        <item>Buy</item>
+        <item>Do not forget</item>
+        <item>Make call</item>
+        <item>Pay taxes</item>
+    </string-array>
+
+    <string-array name="default_other_reminder">
+        <item>Do not forget</item>
     </string-array>
 </resources>
