Modified ReminderDBHelper, AddToDo, LoadMonthActivity. Added RecyclerAdapter, ReminderDataModel, ShowAllRemsActivity. Changed colors.

--- a/app/src/main/res/layout/activity_add_to_do.xml
+++ b/app/src/main/res/layout/activity_add_to_do.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/colorAppBacground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddToDo">
@@ -10,14 +11,15 @@
         android:id="@+id/textView_add_reminder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:contentDescription="Activity title"
         android:fontFamily="@font/archivo_black"
         android:text="Add reminder"
+        android:textColor="@color/colorButtonTextColor"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,9 +43,11 @@
             android:id="@+id/button_Job_reminder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:background="@drawable/button_layout_not_pressed"
             android:text="JOB"
+            android:textColor="@color/colorButtonTextColor"
             app:layout_constraintStart_toStartOf="parent"
             tools:text="JOB" />
 
@@ -51,9 +55,11 @@
             android:id="@+id/button_home_reminder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:background="@drawable/button_layout_not_pressed"
             android:text="HOME"
+            android:textColor="@color/colorButtonTextColor"
             app:layout_constraintStart_toEndOf="@+id/button_Job_reminder"
             tools:text="HOME" />
 
@@ -61,11 +67,13 @@
             android:id="@+id/button_other_reminder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:background="@drawable/button_layout_not_pressed"
             android:text="OTHER"
+            android:textColor="@color/colorButtonTextColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/button_home_reminder"
             tools:text="OTHER" />
@@ -76,12 +84,14 @@
         android:id="@+id/spinner_select_to_do"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:background="@drawable/button_layout_not_pressed"
         android:entries="@array/default_job_reminders"
+        android:popupBackground="@drawable/button_layout_not_pressed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />
@@ -92,6 +102,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Start Date"
+        android:textColor="@color/colorButtonTextColor"
         app:layout_constraintStart_toStartOf="@+id/spinner_select_to_do"
         app:layout_constraintTop_toBottomOf="@+id/spinner_select_to_do"
         tools:text="Start Date" />
@@ -100,12 +111,13 @@
         android:id="@+id/editTextStartDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPersonName|date"
         android:text="1970/1/1"
+        android:textColor="@color/colorButtonTextColor"
         app:layout_constraintStart_toStartOf="@+id/textViewStartDayLabel"
         app:layout_constraintTop_toBottomOf="@+id/textViewStartDayLabel"
         tools:text="1970/1/1" />
@@ -127,10 +139,11 @@
         android:id="@+id/textViewFinishDayLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="24dp"
         android:text="Finish Date"
+        android:textColor="@color/colorButtonTextColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextStartDate"
         tools:text="Finish Date" />
@@ -139,12 +152,13 @@
         android:id="@+id/editTextFinishDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPersonName|date"
         android:text="1970/1/1"
+        android:textColor="@color/colorButtonTextColor"
         app:layout_constraintStart_toStartOf="@+id/textViewFinishDayLabel"
         app:layout_constraintTop_toBottomOf="@+id/textViewFinishDayLabel"
         tools:text="1970/1/1" />
@@ -171,6 +185,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="24dp"
         android:text="Short comment"
+        android:textColor="@color/colorButtonTextColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextFinishDate"
         tools:text="Short comment" />
@@ -179,12 +194,13 @@
         android:id="@+id/buttonAddReminder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/layout_borders"
         android:contentDescription="Add reminder"
         android:text="ADD"
+        android:textColor="@color/colorButtonTextColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:text="ADD" />
@@ -199,6 +215,7 @@
         android:ems="10"
         android:inputType="text|textShortMessage"
         android:text="Comment task..."
+        android:textColor="@color/colorButtonTextColor"
         app:layout_constraintStart_toStartOf="@+id/textViewTaskComment"
         app:layout_constraintTop_toBottomOf="@+id/textViewTaskComment"
         tools:text="Comment task..." />
