--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="colorAppBacground">#4f83cc</color>
     <color name="colorButtonBackground">#002f6c</color>
     <color name="colorButtonBackgroundOnClick">#009900</color>
+    <color name="colorTodayButton">#009900</color>
     <color name="colorButtonTextColor">#dddddd</color>
 </resources>
