Added SQL delete and update by ID, sorting data by KIND of reminder

--- a/app/src/main/res/layout/activity_add_to_do.xml
+++ b/app/src/main/res/layout/activity_add_to_do.xml
@@ -197,7 +197,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginBottom="24dp"
-        android:background="@drawable/layout_borders"
+        android:background="@drawable/button_layout_not_pressed"
         android:contentDescription="Add reminder"
         android:text="ADD"
         android:textColor="@color/colorButtonTextColor"
@@ -213,7 +213,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:inputType="text|textShortMessage"
+        android:inputType="text"
         android:text="Comment task..."
         android:textColor="@color/colorButtonTextColor"
         app:layout_constraintStart_toStartOf="@+id/textViewTaskComment"
