--- a/app/src/main/res/layout/activity_show_all_rems.xml
+++ b/app/src/main/res/layout/activity_show_all_rems.xml
@@ -9,15 +9,18 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/show_all_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorAppBacground"
         android:gravity="center"
         android:orientation="horizontal"
-        android:background="@color/colorAppBacground"
-        app:layout_constraintBottom_toBottomOf="@+id/show_all_recyclerView"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
