--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="buttonPadingSize">5dp</dimen>
+    <dimen name="recycler_item_margin">1dp</dimen>
 </resources>
