Removing with alertDialog

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,8 +2,45 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_activity_constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorAppBacground"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/close_app_button"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/main_menu_button_size"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/button_layout_not_pressed"
+        android:text="CLOSE APPLICATION"
+        android:textColor="@color/colorButtonTextColor"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="CLOSE APPLICATION" />
+
+    <Button
+        android:id="@+id/show_month_activity_button"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/main_menu_button_size"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:background="@drawable/button_layout_not_pressed"
+        android:text="Show Month"
+        android:textColor="@color/colorButtonTextColor"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Show Month" />
 </android.support.constraint.ConstraintLayout>
